--- a/style.css
+++ b/style.css
@@ -67,14 +67,7 @@ button:focus {
   position: relative;
   width: 420px;
   display: inline-block;
-  margin-top: 60px;
-}
-
-.container h2 {
-  background-color: rgba(0, 0, 0, 0.3);
-  padding: 8px;
-  border-radius: 4px;
-  margin: 0 0 40px;
+  margin-top: 150px;
 }
 
 .container h1 {
@@ -84,8 +77,6 @@ button:focus {
 .topic-container {
   background-color: #2c726e;
   padding: 20px;
-  border-radius: 4px;
-  box-shadow: 0 3px 5px rgba(0, 0, 0, 0.3);
   color: #fff;
   position: relative;
   text-align: center;
@@ -93,11 +84,19 @@ button:focus {
   display: inline-block;
 }
 
+.topic-container h2 {
+  background-color: rgba(0, 0, 0, 0.3);
+  padding: 8px;
+  border-radius: 4px;
+  margin: 0 0 20px;
+}
+
 .topic-container h4 {
   align-content: center;
 }
 .topic-container input {
-  padding: 10px;
+  padding: 5px;
+  width: 50%;
   margin: 0;
 }
 .topic-btn {
@@ -115,13 +114,13 @@ input {
 
 .score-container {
   position: absolute;
-  top: 60px;
+  top: 10px;
   right: 20px;
 }
 
 .time-container {
   position: absolute;
-  top: 60px;
+  top: 10px;
   left: 20px;
 }
 
