--- a/style.css
+++ b/style.css
@@ -3,12 +3,26 @@
 }
 
 body {
-  background-color: #1e5a57;
+  background-image: url(./img/keyboard-b.jpg);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
   min-height: 100vh;
   margin: 0;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   text-align: center;
   margin-top: 100px;
+}
+
+body::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 112%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: -1;
 }
 
 button {
@@ -62,7 +76,7 @@ button:focus {
   background-color: #2c726e;
   padding: 20px;
   border-radius: 4px;
-  box-shadow: 0 3px 5px rgba(0, 0, 0, 0.3);
+  box-shadow: 0 3px 5px rgba(0, 0, 0, 0.8);
   color: #fff;
   position: relative;
   width: 420px;
@@ -75,7 +89,7 @@ button:focus {
 }
 
 .topic-container {
-  background-color: #2c726e;
+  background-color: #2c726ece;
   padding: 20px;
   color: #fff;
   position: relative;
